<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ListaPacotesActivity">

    <ImageView
        android:id="@+id/lista_pacotes_banner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/conteudo_do_banner_inicial"
        android:src="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lista_pacotes_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/especiais"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lista_pacotes_banner" />

    <TextView
        android:id="@+id/lista_pacote_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pais"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_especiais"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_especiais" />

    <ListView
        android:id="@+id/lista_pacotes_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_banner"
        tools:listitem="@layout/item_pacote" />

</androidx.constraintlayout.widget.ConstraintLayout>