<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_pacote_imagem"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/sao_paulo"
        android:contentDescription="@string/imagem_do_pacote" />

    <TextView
        android:id="@+id/resumo_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_imagem"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_pacote_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_local"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/resumo_pacote_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/resumo_pacote_preco"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/resumo_pacote_dias"
        app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_dias"
        tools:text="07/12 - 09/12 de 2021" />

    <TextView
        android:id="@+id/resumo_pacote_preco_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/resumo_pacote_preco_final"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/resumo_pacote_preco"
        app:layout_constraintEnd_toEndOf="@+id/resumo_pacote_preco" />

    <TextView
        android:id="@+id/resumo_pacote_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:gravity="end"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_pacote_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resumo_pacote_data"
        tools:text="R$ 243,99" />

    <Button
        android:id="@+id/resumo_pacote_botao_pagamento"
        style="@style/Widget.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/realizar_pagamento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>